syntax = "proto2";

package catalog;


message CatalogItemV1 {
  required string id = 1;
  required string producerId = 2;
  required string name = 3;
  required string description = 4;
  required CatalogItemTechnologyV1 technology = 5;
  optional CatalogAttributesV1  attributes = 6;
  repeated CatalogDescriptorV1 descriptors = 7;
  optional int64 createdAt = 8;
  repeated CatalogItemRiskAnalysisV1 riskAnalysis = 9;
  optional CatalogItemModeV1 mode = 10;
}

message CatalogItemRiskAnalysisV1 {
  required string id = 1;
  required string name = 2;
  required CatalogRiskAnalysisFormV1 riskAnalysisForm = 3;
  required int64 createdAt = 4;
}

message CatalogRiskAnalysisFormV1 {
  required string id = 1;
  required string version = 2;
  repeated CatalogRiskAnalysisSingleAnswerV1 singleAnswers = 3;
  repeated CatalogRiskAnalysisMultiAnswerV1 multiAnswers = 4;
}

message CatalogRiskAnalysisSingleAnswerV1 {
  required string id = 1;
  required string key = 2;
  optional string value = 3;
}

message CatalogRiskAnalysisMultiAnswerV1 {
  required string id = 1;
  required string key = 2;
  repeated string values = 3;
}

message CatalogAttributeValueV1 {
  required string id = 1;
  required bool explicitAttributeVerification = 2;
}

message CatalogAttributeV1 {
  optional CatalogAttributeValueV1 single = 1;
  repeated CatalogAttributeValueV1 group = 2;
}

message CatalogAttributesV1 {
  repeated CatalogAttributeV1 certified = 1;
  repeated CatalogAttributeV1 declared = 2;
  repeated CatalogAttributeV1 verified = 3;
}

message CatalogDescriptorV1 {
  required string id = 1;
  required string version = 2;
  optional string description = 3;
  repeated CatalogDocumentV1 docs = 4;
  required CatalogDescriptorStateV1 state = 5;
  optional CatalogDocumentV1 interface = 6;
  repeated string audience = 7;
  required int32 voucherLifespan = 8;
  required int32 dailyCallsPerConsumer = 9;
  required int32 dailyCallsTotal = 10;
  optional AgreementApprovalPolicyV1 agreementApprovalPolicy = 11;
  optional int64 createdAt = 12;
  optional int64 publishedAt = 13;
  repeated string serverUrls = 14;
  optional int64 suspendedAt = 15;
  optional int64 deprecatedAt = 16;
  optional int64 archivedAt = 17;
  optional CatalogAttributesV1 attributes = 18;
}

message CatalogDocumentV1 {
  required string id = 1;
  required string name = 2;
  required string contentType = 3;
  required string path = 4;
  required string checksum = 5;
  required string uploadDate = 6;
  required string prettyName = 7;
}

enum CatalogDescriptorStateV1 {
  DRAFT = 1;
  PUBLISHED = 2;
  DEPRECATED = 3;
  SUSPENDED = 4;
  ARCHIVED = 5;
}

enum CatalogItemTechnologyV1 {
  REST = 1;
  SOAP = 2;
}

enum AgreementApprovalPolicyV1 {
  AUTOMATIC = 1;
  MANUAL = 2;
}

enum CatalogItemModeV1 {
  RECEIVE = 1;
  DELIVER = 2;
}



message CatalogItemV1AddedV1 {
  required CatalogItemV1 catalogItem = 1;
}

message ClonedCatalogItemV1AddedV1 {
  required CatalogItemV1 catalogItem = 1;
}

message CatalogItemV1UpdatedV1 {
  required CatalogItemV1 catalogItem = 1;
}

message CatalogItemWithDescriptorsDeletedV1 {
  required CatalogItemV1 catalogItem = 1;
  required string descriptorId = 2;
}

message CatalogItemDocumentUpdatedV1 {
  required string eServiceId = 1;
  required string descriptorId = 2;
  required string documentId = 3;
  required CatalogDocumentV1 updatedDocument = 4;
  repeated string serverUrls = 5;
}

message CatalogItemDeletedV1 {
  required string catalogItemId = 1;
}

message CatalogItemDocumentAddedV1 {
  required string eServiceId = 1;
  required string descriptorId = 2;
  required CatalogDocumentV1 document = 3;
  required bool isInterface = 4;
  repeated string serverUrls = 5;
}

message CatalogItemDocumentDeletedV1 {
  required string eServiceId = 1;
  required string descriptorId = 2;
  required string documentId = 3;
}

message CatalogItemDescriptorAddedV1 {
  required string eServiceId = 1;
  required CatalogDescriptorV1 catalogDescriptor = 2;
}

message CatalogItemDescriptorUpdatedV1 {
  required string eServiceId = 1;
  required CatalogDescriptorV1 catalogDescriptor = 2;
}

message MovedAttributesFromEserviceToDescriptorsV1 {
  required CatalogItemV1 catalogItem = 1;
}

message CatalogItemRiskAnalysisAddedV1 {
  required CatalogItemV1 catalogItem = 1;
  required string catalogRiskAnalysisId = 2;
}

message CatalogItemRiskAnalysisUpdatedV1 {
  required CatalogItemV1 catalogItem = 1;
  required string catalogRiskAnalysisId = 2;
}

message CatalogItemRiskAnalysisDeletedV1 {
  required CatalogItemV1 catalogItem = 1;
  required string catalogRiskAnalysisId = 2;
}